Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -21,8 +21,8 @@
                 </f:facet>
                 <div class="row" >
                     <div class="col-4" >
-                        <common:patient_details patient="#{admissionController.current.patient}"/>
-                        <common:admission_details admission="#{admissionController.current}" ></common:admission_details>
+                        <common:patient_details patient="#{admissionController.current.patient}" class="w-100"/>
+                        <common:admission_details admission="#{admissionController.current}" class="w-100"></common:admission_details>
                     </div>
                     
                     <div class="col-4" >
