--- a/src/main/webapp/resources/ezcomp/common/admission_details.xhtml
+++ b/src/main/webapp/resources/ezcomp/common/admission_details.xhtml
@@ -16,7 +16,7 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
 
-        <p:panel>
+        <p:panel class="w-100">
             <f:facet name="header">
                 <h:outputText styleClass="fas fa-id-card-alt"></h:outputText>
                 <h:outputLabel value="Admission Details" class="mx-4"></h:outputLabel>
@@ -24,85 +24,85 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Date of Admission" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.dateOfAdmission}" >
+                        <div class="col-md-5"><p:outputLabel value="Date of Admission" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.dateOfAdmission}" >
                                 <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}" ></f:convertDateTime>
                             </h:outputText></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="BHT No" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputLabel  value="#{cc.attrs.admission.bhtNo}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="BHT No" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputLabel  value="#{cc.attrs.admission.bhtNo}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Citizenship" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"> <h:outputText value="#{cc.attrs.admission.foriegner ? 'Foreigner' : 'Local'}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Citizenship" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"> <h:outputLabel value="#{cc.attrs.admission.foriegner ? 'Foreigner' : 'Local'}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Claimable/Non-Claimable" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.claimable ? 'Claimable' : 'Non-Claimable'}" />
+                        <div class="col-md-5"><p:outputLabel value="Claimable/Non-Claimable" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.claimable ? 'Claimable' : 'Non-Claimable'}" />
                         </div>
                     </div><!-- comment -->
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Referring Doctor"/></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.referringDoctor.person.name}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Referring Doctor"/></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.referringDoctor.person.name}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><h:outputLabel value="OPD Doctor" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.opdDoctor.person.nameWithTitle}" />
+                        <div class="col-md-5"><h:outputLabel value="OPD Doctor" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.opdDoctor.person.nameWithTitle}" />
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Admission Type"/></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.admissionType.name}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Admission Type"/></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.admissionType.name}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><h:outputLabel value="Payment Method"/></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.paymentMethod}" /></div>
+                        <div class="col-md-5"><h:outputLabel value="Payment Method"/></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.paymentMethod}" /></div>
                     </div><!-- comment -->
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Guardian Name" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.guardian.name}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Guardian Name" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.guardian.name}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Guardian NIC"/></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"> <h:outputText value="#{cc.attrs.admission.guardian.nic}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Guardian NIC"/></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"> <h:outputText value="#{cc.attrs.admission.guardian.nic}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Guardian Mobile No" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.guardian.mobile}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Guardian Mobile No" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.guardian.mobile}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Guardian Home Phone No" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.guardian.phone}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Guardian Home Phone No" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.guardian.phone}" /></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2"><p:outputLabel value="Guardian Address" /></div>
-                        <div class="col-md-2 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
-                        <div class="col-md-8"><h:outputText value="#{cc.attrs.admission.guardian.address}" /></div>
+                        <div class="col-md-5"><p:outputLabel value="Guardian Address" /></div>
+                        <div class="col-md-1 justify-content-end d-flex"><p:outputLabel value=":" class="mx-2"/></div>
+                        <div class="col-md-6"><h:outputText value="#{cc.attrs.admission.guardian.address}" /></div>
                     </div>
                 </div></div>
 
