--- a/src/main/webapp/resources/inward/bht.xhtml
+++ b/src/main/webapp/resources/inward/bht.xhtml
@@ -15,10 +15,12 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <h:form class="w-100" >
-
-            <p:commandButton class="my-1" value="Print" ajax="false" >
+            <div claas="col-md-12">
+                <p:commandButton class="my-1 w-25" value="Print" ajax="false" >
                 <p:printer target="gpBillPreview" ></p:printer>
             </p:commandButton>
+            </div>
+            
 
             <h:outputStylesheet>
                 /* Styles for screen display */
