--- a/src/main/webapp/admin/items/opd_service.xhtml
+++ b/src/main/webapp/admin/items/opd_service.xhtml
@@ -80,73 +80,82 @@
                                 <h:panelGrid id="gpDetail" columns="1" class="w-100">
                                     <p:tabView >
                                         <p:tab id="gpDetails" title="Basic Details" >
-                                            <h:panelGrid columns="2" class="w-100">
+                                            <table>
+                                                <tr>
+                                                    <td><h:outputText id="lblName" value="Name"></h:outputText></td>
+                                                    <td><p:inputText  autocomplete="off" id="txtName" value="#{serviceController.current.name}" required="true" requiredMessage="Please enter a name to register" class="w-100 text-center"></p:inputText></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><h:outputText id="lblAddress" value="Printing Name"></h:outputText></td>
+                                                    <td><p:inputText autocomplete="off" id="txtAddress" value="#{serviceController.current.printName}" class="w-100"></p:inputText></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><h:outputText id="lblFullName" value="Full Name"></h:outputText></td>
+                                                    <td><p:inputText autocomplete="off" id="txtFullName" value="#{serviceController.current.fullName}" class="w-100"></p:inputText></td>
+                                                </tr>
+                                            </table>
 
-                                                <h:outputText id="lblName" value="Name" ></h:outputText>
-                                                <p:inputText 
-                                                    autocomplete="off" 
-                                                    id="txtName" 
-                                                    value="#{serviceController.current.name}" 
-                                                    required="true" 
-                                                    requiredMessage="Please enter a name to register"
-                                                    class="w-100"></p:inputText>
-                                                <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                                <p:inputText autocomplete="off" id="txtAddress"   
-                                                             value="#{serviceController.current.printName}" 
-                                                             class="w-100" ></p:inputText>
-                                                <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                                <p:inputText autocomplete="off" id="txtFullName"   value="#{serviceController.current.fullName}" class="w-100" ></p:inputText>
-                                                <p:outputLabel value="Item Code"/>
-                                                <p:inputText id="ServiceCode" autocomplete="off" value="#{serviceController.current.code}" class="form-control"/>
+                                            <table>
+                                                <tr>
+                                                    <td><p:outputLabel value="Item Code"></p:outputLabel></td>
+                                                    <td><p:inputText id="ServiceCode" autocomplete="off" value="#{serviceController.current.code}" class="form-control"/></td>
+                                                    <td>
+                                                        <p:commandButton style="float: right" class="ui-button-warning" id="btnGenarate" update="ServiceCode" process="btnGenarate" value="Generate" action="#{serviceController.generateServiceCode()}">
+                                                        </p:commandButton>
+                                                    </td>
+                                                </tr>
+                                            </table>
 
-                                                <p:commandButton 
-                                                    style="float: right"
-                                                    class="ui-button-warning"
-                                                    id="btnGenarate" 
-                                                    update="ServiceCode"
-                                                    process="btnGenarate" 
-                                                    value="Genarate"          
-                                                    action="#{serviceController.genarateServiceCode()}">
-                                                </p:commandButton>
+                                            <table>
+                                                <tr>
+                                                    <td><h:outputText value="Service Category/Sub Category"></h:outputText></td>
+                                                    <td>
+                                                        <p:autoComplete completeMethod="#{categoryController.completeServiceCategory}" var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{serviceController.current.category}">
+                                                            <p:column>#{pta.name}</p:column>
+                                                            <p:column>#{pta.parentCategory}</p:column>
+                                                        </p:autoComplete>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td><h:outputText value="Institution"></h:outputText></td>
+                                                    <td>
+                                                        <p:selectOneMenu id="cmbIns" value="#{serviceController.current.institution}" class="form-control">
+                                                            <f:selectItem itemLabel="Please select an Institution" />
+                                                            <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                                            <f:ajax execute="cmbIns" render="cmbDep" event="change" />
+                                                        </p:selectOneMenu>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td><h:outputText value="Department"></h:outputText></td>
+                                                    <td>
+                                                        <p:selectOneMenu id="cmbDep" value="#{serviceController.current.department}" class="form-control">
+                                                            <f:selectItem itemLabel="Please select a Department" />
+                                                            <f:selectItems value="#{serviceController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                                        </p:selectOneMenu>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td><h:outputText value="Inward Charge Category"></h:outputText></td>
+                                                    <td>
+                                                        <p:selectOneMenu filter="true" filterMatchMode="contains" id="cmbInward" value="#{serviceController.current.inwardChargeType}" class="form-control">
+                                                            <f:selectItem itemLabel="Please select Charge" />
+                                                            <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}" />
+                                                        </p:selectOneMenu>
+                                                    </td>
+                                                </tr>
+                                            </table>
 
-                                                <h:outputText value="Service Category/Sub Category" ></h:outputText>
-                                                <p:autoComplete 
-                                                    completeMethod="#{categoryController.completeServiceCategory}" 
-                                                    var="pta" 
-                                                    itemLabel="#{pta.name}"
-                                                    itemValue="#{pta}" 
-                                                    forceSelection="true" 
-                                                    value="#{serviceController.current.category}"
-                                                    >                                    
-                                                    <p:column>#{pta.name}</p:column>
-                                                    <p:column>#{pta.parentCategory}</p:column>                                        
-                                                </p:autoComplete>
 
 
 
-                                                <h:outputText value="Institution" ></h:outputText>
-                                                <p:selectOneMenu id="cmbIns" value="#{serviceController.current.institution}" class="form-control">
-                                                    <f:selectItem itemLabel="Please select a Institution"/>
-                                                    <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                                    <f:ajax execute="cmbIns" render="cmbDep" event="change"/>                                        
-                                                </p:selectOneMenu>
-                                                <h:outputText value="Department" ></h:outputText>
-                                                <p:selectOneMenu id="cmbDep" value="#{serviceController.current.department}" class="form-control">
-                                                    <f:selectItem itemLabel="Please select a Department"/>
-                                                    <f:selectItems value="#{serviceController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                                </p:selectOneMenu>
-                                                <h:outputText value="Inward Charge Category" ></h:outputText>
-                                                <p:selectOneMenu
-                                                    filter="true"
-                                                    filterMatchMode="contains"
-                                                    id="cmbInward" 
-                                                    value="#{serviceController.current.inwardChargeType}" 
-                                                    class="form-control">
-                                                    <f:selectItem itemLabel="Please select Charge"/>
-                                                    <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
-                                                </p:selectOneMenu>
 
-                                            </h:panelGrid>
+
+
+
+
+
+
                                         </p:tab>
                                         <p:tab title="Additional Details" >
                                             <h:panelGrid columns="2" >
