Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -127,6 +127,7 @@
                                             class="ui-button-secondary " 
                                             action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                             >
+                                            <f:setPropertyActionListener value="#{bhtEditController.current.patient}" target="#{patientController.current}" ></f:setPropertyActionListener>
                                         </p:commandButton>
                                     </h:panelGrid>
 
