--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -127,7 +127,9 @@
                                             class="ui-button-secondary " 
                                             action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                             >
-                                            <f:setPropertyActionListener value="#{bhtEditController.current.patient}" target="#{patientController.current}" ></f:setPropertyActionListener>
+                                            <f:setPropertyActionListener 
+                                                value="#{billBhtController.patientEncounter}" 
+                                                target="#{admissionController.current}" ></f:setPropertyActionListener>
                                         </p:commandButton>
                                     </h:panelGrid>
 
